@@ -1,6 +1,8 @@
   * Fix to be not so picky about colorizing grass
   * Fix which prevents a crash while in Explored Highlighting mode
   * Fix Sapling rendering
+  * Override texture data for X-Ray will be read from the
+    .minecraft_xray/texture directory now
 
 Minecraft X-Ray 2.7 Maintenance Branch 10 (2011.03.15)
 
